--- a/res/layout/activity_introduction.xml
+++ b/res/layout/activity_introduction.xml
@@ -12,6 +12,8 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
         android:text="@string/description_introduction1" />
 
     <TextView
