--- a/res/layout/activity_introduction.xml
+++ b/res/layout/activity_introduction.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
-        android:text="@string/description_introduction1" />
+        android:text="@string/description1_introduction" />
 
     <TextView
         android:id="@+id/textView2"
@@ -23,7 +23,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="30dp"
-        android:text="@string/description_introduction2" />
+        android:text="@string/description2_introduction" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -31,7 +31,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/textView2"
         android:layout_marginTop="30dp"
-        android:text="@string/description_introduction3" />
+        android:text="@string/description3_introduction" />
 
     <Button
         android:id="@+id/button1"
@@ -40,6 +40,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="60dp"
-        android:text="@string/next" />
+        android:text="@string/next"
+        android:onClick="next" />
 
 </RelativeLayout>
