--- a/res/layout/activity_step2.xml
+++ b/res/layout/activity_step2.xml
@@ -28,11 +28,11 @@
         android:id="@+id/button2"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textView1"
         android:layout_below="@+id/textView1"
-        android:text="@string/show_hints"
-        android:onClick="show_hints" />
+        android:onClick="show_hints"
+        android:text="@string/show_hints" />
     
     <Button
         android:id="@+id/button1"
