分成ET tutorail 遊戲教學

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -35,8 +35,18 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="120dp"
         android:onClick="start"
         android:text="@string/start" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="60dp"
+        android:onClick="start_et_tutorial"
+        android:text="@string/et_tutorial" />
 
 </RelativeLayout>
