--- a/res/layout/activity_step2.xml
+++ b/res/layout/activity_step2.xml
@@ -41,7 +41,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="60dp"
-        android:onClick="next"
-        android:text="@string/next" />
+        android:onClick="restart"
+        android:text="@string/restart" />
 
 </RelativeLayout>
