--- a/res/layout/fragment_common_parts.xml
+++ b/res/layout/fragment_common_parts.xml
@@ -9,8 +9,17 @@
     tools:context=".CommonPartsFragment" >
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:text="@string/description_common_parts"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView android:id="@+id/textView1" 
+        android:layout_width="wrap_content" 
+        android:layout_height="wrap_content" 
+        android:text="@string/ex_common_parts" 
+        android:layout_alignLeft="@+id/textView2" 
+        android:layout_below="@+id/textView2"/>
 
 </RelativeLayout>
